--- a/wp/mywordpress/Dockerfile
+++ b/wp/mywordpress/Dockerfile
@@ -1,3 +1,7 @@
 FROM wordpress
 
+COPY ssl/ /etc/apache2/ssl/
+COPY sites-available/ /etc/apache2/sites-available/
+COPY sites-enabled/ /etc/apache2/sites-enabled/
+
 RUN a2enmod ssl
