wp funziona crisis anche ma non ho il db per provare

--- a/crisis/myphp/Dockerfile
+++ b/crisis/myphp/Dockerfile
@@ -1,7 +1,9 @@
-FROM wordpress
+FROM php:7.1-apache
 
 COPY ssl/ /etc/apache2/ssl/
 COPY sites-available/ /etc/apache2/sites-available/
 COPY sites-enabled/ /etc/apache2/sites-enabled/
+
+RUN docker-php-ext-install mysqli curl && docker-php-ext-enable mysqli  
 
 RUN a2enmod ssl
