--- a/crisis/docker-compose.yml
+++ b/crisis/docker-compose.yml
@@ -12,28 +12,24 @@ services:
        MYSQL_USER: crisis
        MYSQL_PASSWORD: torro!234
 
-   wordpress:
-     build: mywordpress/
+   php:
+     build: myphp/
      depends_on:
        - db
-     image: mywordpress:latest
+     image: myphp:latest
      ports:
        - "80:80"
        - "443:443"
      restart: always
      volumes:
-       - wordpress-data:/var/www/html
+       - http-data:/var/www/html
        - apache-available:/etc/apache2/sites-available:ro
        - apache-enabled:/etc/apache2/sites-enabled:ro
        - apache-ssl:/etc/apache2/ssl:ro
-     environment:
-       WORDPRESS_DB_HOST: db:3306
-       WORDPRESS_DB_USER: admin
-       WORDPRESS_DB_PASSWORD: torro!234
 
 volumes:
     dbdata:
-    wordpress-data:
+    http-data:
     apache-available:
     apache-enabled:
     apache-ssl:
