--- a/crisis/myphp/Dockerfile
+++ b/crisis/myphp/Dockerfile
@@ -4,6 +4,6 @@ COPY ssl/ /etc/apache2/ssl/
 COPY sites-available/ /etc/apache2/sites-available/
 COPY sites-enabled/ /etc/apache2/sites-enabled/
 
-RUN docker-php-ext-install mysqli curl && docker-php-ext-enable mysqli  
+RUN docker-php-ext-install mysqli  && docker-php-ext-enable mysqli  
 
 RUN a2enmod ssl
